--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "node src/utils/benchmark.js",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "forever src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,11 +21,13 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "firebase": "^9.8.4",
+    "firebase-admin": "^11.0.0",
     "forever": "^4.0.3",
     "forever-monitor": "^3.0.3",
     "knex": "^2.1.0",
