--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "node src/utils/benchmark.js",
+    "test": "node src/utils/benchmark.utils.js",
     "dev": "nodemon src/server.js",
     "start": "forever src/server.js"
   },
@@ -39,7 +39,6 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.0.0",
     "autocannon": "^7.9.0",
     "nodemon": "^2.0.16"
   }
